--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,8 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IFWL F1 Leaderboard</title>
   <style>
     body {
@@ -52,6 +52,7 @@
       background: #333;
       text-transform: uppercase;
       font-weight: bold;
+      color: #000;
     }
     tr:hover {
       background: rgba(255, 255, 255, 0.05);
@@ -66,186 +67,141 @@
       background-size: 100px auto;
       background-position: right center;
       background-repeat: no-repeat;
-      background-blend-mode: overlay;
     }
-    .team-MERCEDES { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
-    .team-MCLAREN { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
-    .team-FERRARI { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
-    .team-RED BULL RACING, .team-RB, .team-RACING BULLS { background-color: #1E41FF; background-image: url('RBRLOGO.webp'); }
-    .team-WILLIAMS { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
-    .team-ASTON MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
-    .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
-    .team-ALPINE { background-color: #0090FF; background-image: url('ALPINEL
 
-OGO.webp'); }
-    .team-KICK SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
-    .team-RESERVE { background-color: #999999; background-image: url('RESERVE LOGO.webp'); }
-  
-<style>
-/* Team Colors */
-.team-MERCEDES { background-color: #00D2BE; }
-.team-MCLAREN { background-color: #FF8700; }
-.team-FERRARI { background-color: #DC0000; }
-.team-WILLIAMS { background-color: #005AFF; }
-.team-HAAS { background-color: #B6BABD; }
-.team-ASTON { background-color: #004940; }
-.team-ASTON\ MARTIN { background-color: #004940; }
-.team-KICK { background-color: #000000; }
-.team-KICK\ SAUBER { background-color: #000000; }
-.team-RESERVE { background-color: #FFFFFF; color: black; }
-.team-RED\ BULL\ RACING,
-.team-RACING\ BULLS {
-    background-color: #1B1443;
-}
+    /* Team Colors and Logos */
+    .team-MERCEDES         { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
+    .team-MCLAREN          { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
+    .team-FERRARI          { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
+    .team-RED\ BULL\ RACING,
+    .team-RACING\ BULLS   { background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
+    .team-WILLIAMS         { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
+    .team-ASTON\ MARTIN   { background-color: #004940; background-image: url('ASTONLOGO.webp'); }
+    .team-HAAS             { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
+    .team-ALPINE           { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
+    .team-KICK\ SAUBER    { background-color: #000000; background-image: url('KICKLOGO.webp'); }
+    .team-RESERVE          { background-color: #FFFFFF; color: black; background-image: url('RESERVE LOGO.webp'); }
 
-/* Ensure logos are full color */
-.team-logo {
-  
-  
-}
-</style>
-
-</style>
+    .team-logo {
+      height: 40px;
+      margin-left: 10px;
+      opacity: 1 !important;
+      mix-blend-mode: normal !important;
+      filter: none !important;
+    }
+  </style>
 </head>
 <body>
+  <div class="version">Version: Beta 0.0.20 (Fixed Colors & Logos)</div>
+  <div class="header">
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <h1>IFWL F1 Leaderboard</h1>
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
+  </div>
 
-<div class="version">Version: Beta 0.0.19 (Team Row Backgrounds + Logos)</div>
+  <h2>Driver Standings</h2>
+  <table id="driverTable">
+    <thead>
+      <tr>
+        <th>Driver</th>
+        <th>Team</th>
+        <th>Total Points</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-<div class="header">
-  <img src="ifwl_logo.png" alt="IFWL Logo">
-  <h1>IFWL F1 Leaderboard</h1>
-  <img src="ifwl_logo.png" alt="IFWL Logo">
-</div>
+  <h2>Constructors Standings</h2>
+  <table id="constructorTable">
+    <thead>
+      <tr>
+        <th>Team</th>
+        <th>Total Points</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-<h2>Driver Standings</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Driver</th>
-      <th>Team</th>
-      <th>Total Points</th>
-    </tr>
-  </thead>
-  <tbody id="drivers">
-    <tr><td colspan="3">Loading...</td></tr>
-  </tbody>
-</table>
+  <h2>Unassigned Drivers</h2>
+  <table id="unassignedTable">
+    <thead>
+      <tr>
+        <th>Driver</th>
+        <th>Team</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
-<h2>Constructors Standings</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Team</th>
-      <th>Total Points</th>
-    </tr>
-  </thead>
-  <tbody id="constructors">
-    <tr><td colspan="2">Loading...</td></tr>
-  </tbody>
-</table>
+  <script>
+    const sheetID = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+    const sheetName = "Sheet1";
+    const base = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}`;
+    const teamLogos = {
+      "ALPINE": "ALPINE.webp",
+      "ASTON MARTIN": "ASTON.webp",
+      "FERRARI": "FERRARI.webp",
+      "HAAS": "HAAS.webp",
+      "MCLAREN": "MCLAREN.webp",
+      "MERCEDES": "MERCEDES.webp",
+      "RACING BULLS": "RACINGBULLS.webp",
+      "RED BULL RACING": "RBR.webp",
+      "KICK SAUBER": "SAUBER.webp",
+      "RESERVE": "RESERVE.webp",
+      "WILLIAMS": "WILLIAMS.webp"
+    };
 
-<h2>Unassigned Drivers</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Driver</th>
-    </tr>
-  </thead>
-  <tbody id="unassigned">
-    <tr><td>Loading...</td></tr>
-  </tbody>
-</table>
-
-<script>
-  const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/gviz/tq?tqx=out:json';
-
-  const teamLogos = {
-    "ALPINE": "ALPINE.webp",
-    "ASTON MARTIN": "ASTON.webp",
-    "FERRARI": "FERRARI.webp",
-    "HAAS": "HAAS.webp",
-    "MCLAREN": "MCLAREN.webp",
-    "MERCEDES": "MERCEDES.webp",
-    "RACING BULLS": "RACINGBULLS.webp",
-    "RED BULL RACING": "RBR.webp",
-    "KICK SAUBER": "SAUBER.webp",
-    "RESERVE": "RESERVE.webp",
-    "WILLIAMS": "WILLIAMS.webp"
-  };
-
-  function getTeamDisplay(teamName) {
-    const upperTeam = teamName.toUpperCase();
-    if (teamLogos[upperTeam]) {
-      return `<div style="display:flex;align-items:center;justify-content:center;"><img src="${teamLogos[upperTeam]}" alt="${teamName}" class="logo">${teamName}</div>`;
-    } else {
-      return teamName;
+    function formatTeamClass(team) {
+      return team ? "team-" + team.toUpperCase().replace(/ /g, "\ ") : "";
     }
-  }
 
-  async function fetchLeaderboard() {
-    try {
-      const response = await fetch(apiUrl);
-      const text = await response.text();
-      const json = JSON.parse(text.substring(47).slice(0, -2));
-      const data = json.table.rows.map(row => row.c.map(cell => cell ? cell.v : ''));
+    fetch(base)
+      .then(res => res.text())
+      .then(rep => {
+        const data = JSON.parse(rep.substr(47).slice(0, -2)).table.rows;
+        const drivers = data.map(r => ({
+          driver: r.c[0]?.v,
+          team: r.c[1]?.v,
+          points: parseInt(r.c[18]?.v || 0)
+        })).filter(d => d.driver);
 
-      const drivers = data.slice(0).filter(row => row[0] && row[1]).map(row => ({
-        driver: row[0].trim(),
-        team: row[1].trim(),
-        totalPoints: row[18] ? parseInt(row[18]) : 0
-      })).sort((a, b) => b.totalPoints - a.totalPoints);
+        const driverTable = document.getElementById("driverTable").querySelector("tbody");
+        const constructorTable = document.getElementById("constructorTable").querySelector("tbody");
+        const unassignedTable = document.getElementById("unassignedTable").querySelector("tbody");
 
-      const driversTable = document.getElementById('drivers');
-      driversTable.innerHTML = '';
-      drivers.forEach(d => {
-        const row = document.createElement('tr');
-        row.className = 'driver-row team-' + d.team.toUpperCase();
-        row.innerHTML = `<td>${d.driver}</td><td>${getTeamDisplay(d.team)}</td><td>${d.totalPoints}</td>`;
-        driversTable.appendChild(row);
-      });
+        drivers.forEach(d => {
+          if (!d.team) {
+            const tr = document.createElement("tr");
+            tr.innerHTML = `<td>${d.driver}</td><td>Unassigned</td>`;
+            unassignedTable.appendChild(tr);
+            return;
+          }
 
-      const constructorsMap = {};
-      drivers.forEach(d => {
-        const team = d.team;
-        const totalPoints = d.totalPoints;
-        if (!constructorsMap[team]) constructorsMap[team] = 0;
-        constructorsMap[team] += totalPoints;
-      });
-
-      const constructors = Object.keys(constructorsMap).map(team => ({ team, points: constructorsMap[team] }))
-        .sort((a, b) => b.points - a.points);
-
-      const constructorsTable = document.getElementById('constructors');
-      constructorsTable.innerHTML = '';
-      constructors.forEach(t => {
-        const row = document.createElement('tr');
-        row.innerHTML = `<td>${getTeamDisplay(t.team)}</td><td>${t.points}</td>`;
-        constructorsTable.appendChild(row);
-      });
-
-      const unassignedData = data.slice(0).filter(row => row[0] && !row[1]);
-      const unassignedTable = document.getElementById('unassigned');
-      unassignedTable.innerHTML = '';
-      if (unassignedData.length > 0) {
-        unassignedData.forEach(row => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `<td>${row[0]}</td>`;
-          unassignedTable.appendChild(tr);
+          const row = document.createElement("tr");
+          row.className = `driver-row ${formatTeamClass(d.team)}`;
+          row.innerHTML = `
+            <td>${d.driver}</td>
+            <td><img class="logo" src="${teamLogos[d.team.toUpperCase()] || ""}" alt="${d.team}" /> ${d.team}</td>
+            <td>${d.points}</td>
+          `;
+          driverTable.appendChild(row);
         });
-      } else {
-        unassignedTable.innerHTML = '<tr><td>No unassigned drivers</td></tr>';
-      }
 
-    } catch (error) {
-      console.error('Error:', error);
-      document.getElementById('drivers').innerHTML = '<tr><td colspan="3">Error loading driver data</td></tr>';
-      document.getElementById('constructors').innerHTML = '<tr><td colspan="2">Error loading constructor data</td></tr>';
-      document.getElementById('unassigned').innerHTML = '<tr><td>Error loading unassigned drivers</td></tr>';
-    }
-  }
+        const constructors = {};
+        drivers.forEach(d => {
+          if (d.team) constructors[d.team] = (constructors[d.team] || 0) + d.points;
+        });
 
-  fetchLeaderboard();
-</script>
-
+        Object.entries(constructors).forEach(([team, points]) => {
+          const row = document.createElement("tr");
+          row.className = `driver-row ${formatTeamClass(team)}`;
+          row.innerHTML = `
+            <td><img class="logo" src="${teamLogos[team.toUpperCase()] || ""}" alt="${team}" /> ${team}</td>
+            <td>${points}</td>
+          `;
+          constructorTable.appendChild(row);
+        });
+      });
+  </script>
 </body>
 </html>
