--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -69,18 +69,18 @@
       background-repeat: no-repeat;
     }
 
-    /* Team Colors and Logos */
-    .team-MERCEDES         { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
-    .team-MCLAREN          { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
-    .team-FERRARI          { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
-    .team-RED\ BULL\ RACING,
-    .team-RACING\ BULLS   { background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
-    .team-WILLIAMS         { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
-    .team-ASTON\ MARTIN   { background-color: #004940; background-image: url('ASTONLOGO.webp'); }
-    .team-HAAS             { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
-    .team-ALPINE           { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
-    .team-KICK\ SAUBER    { background-color: #000000; background-image: url('KICKLOGO.webp'); }
-    .team-RESERVE          { background-color: #FFFFFF; color: black; background-image: url('RESERVE LOGO.webp'); }
+    /* Corrected Team Colors and Logos */
+    .team-Alpine             { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
+    .team-Aston\ Martin     { background-color: #004940; background-image: url('ASTONLOGO.webp'); }
+    .team-Ferrari            { background-color: #DC0000; background-image: url('FERRARILOGO.webp'); }
+    .team-Haas               { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
+    .team-Kick\ Sauber      { background-color: #000000; background-image: url('KICKLOGO.webp'); }
+    .team-Mclaren            { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
+    .team-Mercedes           { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
+    .team-Racing\ Bulls     { background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
+    .team-Red\ Bull\ Racing{ background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
+    .team-Williams           { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
+    .team-Reserve            { background-color: #FFFFFF; color: black; background-image: url('RESERVE LOGO.webp'); }
 
     .team-logo {
       height: 40px;
@@ -92,7 +92,7 @@
   </style>
 </head>
 <body>
-  <div class="version">Version: Beta 0.0.20 (Fixed Colors & Logos)</div>
+  <div class="version">Version: Beta 0.0.21 (Fixed Colors & Logos)</div>
   <div class="header">
     <img src="ifwl_logo.png" alt="IFWL Logo" />
     <h1>IFWL F1 Leaderboard</h1>
