--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -73,7 +73,7 @@
     .team-FERRARI { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
     .team-RED BULL RACING, .team-RB, .team-RACING BULLS { background-color: #1E41FF; background-image: url('RBRLOGO.webp'); }
     .team-WILLIAMS { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
-    .team-ASTON MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
+    .team-ASTON\ MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
     .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
     .team-ALPINE { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
     .team-KICK SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
