--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -76,7 +76,7 @@
     .team-ASTON\ MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
     .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
     .team-ALPINE { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
-    .team-KICK SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
+    .team-KICK\ SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
     .team-RESERVE { background-color: #999999; background-image: url('RESERVE LOGO.webp'); }
   
 <style>
