--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -66,48 +66,27 @@
       background-size: 100px auto;
       background-position: right center;
       background-repeat: no-repeat;
-      background-blend-mode: overlay;
     }
-    .team-MERCEDES { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
-    .team-MCLAREN { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
-    .team-FERRARI { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
-    .team-RED BULL RACING, .team-RB, .team-RACING BULLS { background-color: #1E41FF; background-image: url('RBRLOGO.webp'); }
-    .team-WILLIAMS { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
-    .team-ASTON\ MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
-    .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
-    .team-ALPINE { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
-    .team-KICK\ SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
-    .team-RESERVE { background-color: #999999; background-image: url('RESERVE LOGO.webp'); }
-  
-<style>
-/* Team Colors */
-.team-MERCEDES { background-color: #00D2BE; }
-.team-MCLAREN { background-color: #FF8700; }
-.team-FERRARI { background-color: #DC0000; }
-.team-WILLIAMS { background-color: #005AFF; }
-.team-HAAS { background-color: #B6BABD; }
-.team-ASTON { background-color: #004940; }
-.team-ASTON\ MARTIN { background-color: #004940; }
-.team-KICK { background-color: #000000; }
-.team-KICK\ SAUBER { background-color: #000000; }
-.team-RESERVE { background-color: #FFFFFF; color: black; }
-.team-RED\ BULL\ RACING,
-.team-RACING\ BULLS {
-    background-color: #1B1443;
-}
 
-/* Ensure logos are full color */
-.team-logo {
-  opacity: 1 !important;
-  filter: none !important;
-}
-</style>
+    /* Team Colors and Logos */
+    .team-MERCEDES         { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
+    .team-MCLAREN          { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
+    .team-FERRARI          { background-color: #DC0000; background-image: url('FERRARILOGO.webp'); }
+    .team-RED\ BULL\ RACING,
+    .team-RACING\ BULLS    { background-color: #1B1443; background-image: url('RBRLOGO.webp'); }
+    .team-WILLIAMS         { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
+    .team-ASTON\ MARTIN    { background-color: #004940; background-image: url('ASTONLOGO.webp'); }
+    .team-HAAS             { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
+    .team-ALPINE           { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
+    .team-KICK\ SAUBER     { background-color: #000000; background-image: url('KICKLOGO.webp'); }
+    .team-RESERVE
+
 
 </style>
 </head>
 <body>
 
-<div class="version">Version: Beta 0.0.19 (Team Row Backgrounds + Logos)</div>
+<div class="version">Version: Beta 0.0.19 - test (Team Row Backgrounds + Logos)</div>
 
 <div class="header">
   <img src="ifwl_logo.png" alt="IFWL Logo">
