--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>IFWL F1 Leaderboard</title>
   <style>
     body {
@@ -51,196 +52,154 @@
       background: #333;
       text-transform: uppercase;
       font-weight: bold;
+      color: #000;
     }
     tr:hover {
       background: rgba(255, 255, 255, 0.05);
-    }
-    img.logo {
-      height: 48px;
-      vertical-align: middle;
-      margin-right: 8px;
     }
     .driver-row {
       position: relative;
       background-size: 100px auto;
       background-position: right center;
       background-repeat: no-repeat;
-      background-blend-mode: overlay;
     }
-    .team-MERCEDES { background-color: #00D2BE; background-image: url('MERCEDESLOGO.webp'); }
-    .team-MCLAREN { background-color: #FF8700; background-image: url('MCLARENLOGO.webp'); }
-    .team-FERRARI { background-color: #DC0000; background-image: url('FERARRILOGO.webp'); }
-    .team-RED BULL RACING, .team-RB, .team-RACING BULLS { background-color: #1E41FF; background-image: url('RBRLOGO.webp'); }
-    .team-WILLIAMS { background-color: #005AFF; background-image: url('WILLIAMSLOGO.webp'); }
-    .team-ASTON\ MARTIN { background-color: #00665E; background-image: url('ASTONLOGO.webp'); }
-    .team-HAAS { background-color: #B6BABD; background-image: url('HAASLOGO.webp'); }
-    .team-ALPINE { background-color: #0090FF; background-image: url('ALPINELOGO.webp'); }
-    .team-KICK\ SAUBER { background-color: #00E701; background-image: url('KICKLOGO.webp'); }
-    .team-RESERVE { background-color: #999999; background-image: url('RESERVELOGO.webp'); }
-  
-<style>
-/* Team Colors */
-.team-MERCEDES { background-color: #00D2BE; }
-.team-MCLAREN { background-color: #FF8700; }
-.team-FERRARI { background-color: #DC0000; }
-.team-WILLIAMS { background-color: #005AFF; }
-.team-HAAS { background-color: #B6BABD; }
-.team-ASTON { background-color: #004940; }
-.team-ASTON\ MARTIN { background-color: #004940; }
-.team-KICK { background-color: #000000; }
-.team-KICK\ SAUBER { background-color: #000000; }
-.team-RESERVE { background-color: #FFFFFF; color: black; }
-.team-RED\ BULL\ RACING,
-.team-RACING\ BULLS {
-    background-color: #1B1443;
-}
-
-/* Ensure logos are full color */
-.team-logo {
-  opacity: 1 !important;
-  filter: none !important;
-}
-</style>
+    img.logo {
+      height: 48px;
+      vertical-align: middle;
+      margin-right: 8px;
+      opacity: 1 !important;
+      filter: none !important;
+      mix-blend-mode: normal !important;
+    }
+    .team-REDBULLRACING,
+    .team-RACINGBULLS {
+      background-color: #1B1443;
+    }
+    .team-RESERVE {
+      background-color: #FFFFFF;
+      color: #000;
+    }
+    .team-KICKSAUBER {
+      background-color: #000000;
+    }
+    .team-ASTONMARTIN {
+      background-color: #004940;
+    }
+  </style>
 </head>
 <body>
+  <div class="version">Version: Beta 0.0.21 (Logos via JS, Team Colors Fixed)</div>
+  <div class="header">
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
+    <h1>IFWL F1 Leaderboard</h1>
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
+  </div>
 
-<div class="version">Version: Beta 0.0.19 - test (Team Row Backgrounds + Logos)</div>
+  <h2>Driver Standings</h2>
+  <table>
+    <thead>
+      <tr><th>Driver</th><th>Team</th><th>Total Points</th></tr>
+    </thead>
+    <tbody id="driver-standings"></tbody>
+  </table>
 
-<div class="header">
-  <img src="ifwl_logo.png" alt="IFWL Logo">
-  <h1>IFWL F1 Leaderboard</h1>
-  <img src="ifwl_logo.png" alt="IFWL Logo">
-</div>
+  <h2>Constructors Standings</h2>
+  <table>
+    <thead>
+      <tr><th>Team</th><th>Total Points</th></tr>
+    </thead>
+    <tbody id="constructor-standings"></tbody>
+  </table>
 
-<h2>Driver Standings</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Driver</th>
-      <th>Team</th>
-      <th>Total Points</th>
-    </tr>
-  </thead>
-  <tbody id="drivers">
-    <tr><td colspan="3">Loading...</td></tr>
-  </tbody>
-</table>
+  <h2>Unassigned Drivers</h2>
+  <table>
+    <thead>
+      <tr><th>Driver</th></tr>
+    </thead>
+    <tbody id="unassigned-drivers"></tbody>
+  </table>
 
-<h2>Constructors Standings</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Team</th>
-      <th>Total Points</th>
-    </tr>
-  </thead>
-  <tbody id="constructors">
-    <tr><td colspan="2">Loading...</td></tr>
-  </tbody>
-</table>
+  <script>
+    const teamCars = {
+      "MERCEDES": "MERCEDES.webp",
+      "ASTON MARTIN": "ASTON.webp",
+      "FERRARI": "FERRARI.webp",
+      "HAAS": "HAAS.webp",
+      "MCLAREN": "MCLAREN.webp",
+      "ALPINE": "ALPINE.webp",
+      "KICK SAUBER": "SAUBER.webp",
+      "WILLIAMS": "WILLIAMS.webp",
+      "RED BULL RACING": "RBR.webp",
+      "RACING BULLS": "RACINGBULLS.webp",
+      "RESERVE": "RESERVE.webp"
+    };
 
-<h2>Unassigned Drivers</h2>
-<table>
-  <thead>
-    <tr>
-      <th>Driver</th>
-    </tr>
-  </thead>
-  <tbody id="unassigned">
-    <tr><td>Loading...</td></tr>
-  </tbody>
-</table>
+    const teamBadges = {
+      "MERCEDES": "MERCEDESLOGO.webp",
+      "ASTON MARTIN": "ASTONLOGO.webp",
+      "FERRARI": "FERRARILOGO.webp",
+      "HAAS": "HAASLOGO.webp",
+      "MCLAREN": "MCLARENLOGO.webp",
+      "ALPINE": "ALPINELOGO.webp",
+      "KICK SAUBER": "KICKLOGO.webp",
+      "WILLIAMS": "WILLIAMSLOGO.webp",
+      "RED BULL RACING": "RBRLOGO.webp",
+      "RACING BULLS": "RBRLOGO.webp",
+      "RESERVE": "RESERVELOGO.webp"
+    };
 
-<script>
-  const apiUrl = 'https://docs.google.com/spreadsheets/d/1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog/gviz/tq?tqx=out:json';
+    const teamClass = name => "team-" + name.toUpperCase().replace(/ /g, "");
 
-  const teamLogos = {
-    "ALPINE": "ALPINE.webp",
-    "ASTON MARTIN": "ASTON.webp",
-    "FERRARI": "FERRARI.webp",
-    "HAAS": "HAAS.webp",
-    "MCLAREN": "MCLAREN.webp",
-    "MERCEDES": "MERCEDES.webp",
-    "RACING BULLS": "RACINGBULLS.webp",
-    "RED BULL RACING": "RBR.webp",
-    "KICK SAUBER": "SAUBER.webp",
-    "RESERVE": "RESERVE.webp",
-    "WILLIAMS": "WILLIAMS.webp"
-  };
+    const sheetID = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+    const sheetName = "Sheet1";
+    const base = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?sheet=${sheetName}`;
 
-  function getTeamDisplay(teamName) {
-    const upperTeam = teamName.toUpperCase();
-    if (teamLogos[upperTeam]) {
-      return `<div style="display:flex;align-items:center;justify-content:center;"><img src="${teamLogos[upperTeam]}" alt="${teamName}" class="logo">${teamName}</div>`;
-    } else {
-      return teamName;
-    }
-  }
+    fetch(base)
+      .then(res => res.text())
+      .then(rep => {
+        const data = JSON.parse(rep.substr(47).slice(0, -2)).table.rows;
+        const rows = data.map(r => ({
+          driver: r.c[0]?.v,
+          team: r.c[1]?.v,
+          points: parseInt(r.c[18]?.v || 0)
+        })).filter(d => d.driver);
 
-  async function fetchLeaderboard() {
-    try {
-      const response = await fetch(apiUrl);
-      const text = await response.text();
-      const json = JSON.parse(text.substring(47).slice(0, -2));
-      const data = json.table.rows.map(row => row.c.map(cell => cell ? cell.v : ''));
+        const driverTable = document.getElementById("driver-standings");
+        const constructorTable = document.getElementById("constructor-standings");
+        const unassignedTable = document.getElementById("unassigned-drivers");
 
-      const drivers = data.slice(0).filter(row => row[0] && row[1]).map(row => ({
-        driver: row[0].trim(),
-        team: row[1].trim(),
-        totalPoints: row[18] ? parseInt(row[18]) : 0
-      })).sort((a, b) => b.totalPoints - a.totalPoints);
+        const teamTotals = {};
 
-      const driversTable = document.getElementById('drivers');
-      driversTable.innerHTML = '';
-      drivers.forEach(d => {
-        const row = document.createElement('tr');
-        row.className = 'driver-row team-' + d.team.toUpperCase();
-        row.innerHTML = `<td>${d.driver}</td><td>${getTeamDisplay(d.team)}</td><td>${d.totalPoints}</td>`;
-        driversTable.appendChild(row);
-      });
+        rows.forEach(({ driver, team, points }) => {
+          if (!team) {
+            const unr = document.createElement("tr");
+            unr.innerHTML = `<td>${driver}</td>`;
+            unassignedTable.appendChild(unr);
+            return;
+          }
 
-      const constructorsMap = {};
-      drivers.forEach(d => {
-        const team = d.team;
-        const totalPoints = d.totalPoints;
-        if (!constructorsMap[team]) constructorsMap[team] = 0;
-        constructorsMap[team] += totalPoints;
-      });
+          const tr = document.createElement("tr");
+          tr.className = `driver-row ${teamClass(team)}`;
+          tr.innerHTML = `
+            <td>${driver}</td>
+            <td><img class="logo" src="${teamBadges[team] || ''}" /> ${team}</td>
+            <td>${points}</td>
+          `;
+          driverTable.appendChild(tr);
 
-      const constructors = Object.keys(constructorsMap).map(team => ({ team, points: constructorsMap[team] }))
-        .sort((a, b) => b.points - a.points);
-
-      const constructorsTable = document.getElementById('constructors');
-      constructorsTable.innerHTML = '';
-      constructors.forEach(t => {
-        const row = document.createElement('tr');
-        row.innerHTML = `<td>${getTeamDisplay(t.team)}</td><td>${t.points}</td>`;
-        constructorsTable.appendChild(row);
-      });
-
-      const unassignedData = data.slice(0).filter(row => row[0] && !row[1]);
-      const unassignedTable = document.getElementById('unassigned');
-      unassignedTable.innerHTML = '';
-      if (unassignedData.length > 0) {
-        unassignedData.forEach(row => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `<td>${row[0]}</td>`;
-          unassignedTable.appendChild(tr);
+          teamTotals[team] = (teamTotals[team] || 0) + points;
         });
-      } else {
-        unassignedTable.innerHTML = '<tr><td>No unassigned drivers</td></tr>';
-      }
 
-    } catch (error) {
-      console.error('Error:', error);
-      document.getElementById('drivers').innerHTML = '<tr><td colspan="3">Error loading driver data</td></tr>';
-      document.getElementById('constructors').innerHTML = '<tr><td colspan="2">Error loading constructor data</td></tr>';
-      document.getElementById('unassigned').innerHTML = '<tr><td>Error loading unassigned drivers</td></tr>';
-    }
-  }
-
-  fetchLeaderboard();
-</script>
-
+        for (const [team, points] of Object.entries(teamTotals)) {
+          const tr = document.createElement("tr");
+          tr.className = `driver-row ${teamClass(team)}`;
+          tr.innerHTML = `
+            <td><img class="logo" src="${teamBadges[team] || ''}" /> ${team}</td>
+            <td>${points}</td>
+          `;
+          constructorTable.appendChild(tr);
+        }
+      });
+  </script>
 </body>
 </html>
