--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -53,107 +53,135 @@
       background: #333;
       text-transform: uppercase;
       font-weight: bold;
-      color: #000;
     }
     tr:hover {
       background: rgba(255, 255, 255, 0.05);
     }
-    img.logo {
+    img.car {
       height: 48px;
       vertical-align: middle;
       margin-right: 8px;
     }
+    img.logo {
+      height: 40px;
+      float: right;
+      margin-left: 10px;
+    }
     .driver-row {
       position: relative;
-      background-size: 100px auto;
+      background-size: auto 100%;
       background-position: right center;
       background-repeat: no-repeat;
     }
-    .team-MERCEDES { background-color: #00D2BE; }
-    .team-MCLAREN { background-color: #FF8700; }
-    .team-FERRARI { background-color: #DC0000; }
-    .team-WILLIAMS { background-color: #005AFF; }
-    .team-HAAS { background-color: #B6BABD; }
-    .team-ASTON { background-color: #004940; }
-    .team-ASTON\ MARTIN { background-color: #004940; }
-    .team-KICK { background-color: #000000; }
-    .team-KICK\ SAUBER { background-color: #000000; }
-    .team-RESERVE { background-color: #FFFFFF; color: black; }
+
+    /* Team Colors and Logos */
+    .team-MERCEDES       { background-color: #00D2BE; }
+    .team-MCLAREN        { background-color: #FF8700; }
+    .team-FERRARI        { background-color: #DC0000; }
+    .team-HAAS           { background-color: #B6BABD; }
+    .team-WILLIAMS       { background-color: #005AFF; }
     .team-RED\ BULL\ RACING,
-    .team-RACING\ BULLS {
-      background-color: #1B1443;
-    }
-    .team-logo {
-      height: 40px;
-      margin-left: 10px;
-      opacity: 1 !important;
-      filter: none !important;
+    .team-RACING\ BULLS { background-color: #1B1443; }
+    .team-ASTON\ MARTIN { background-color: #004940; }
+    .team-KICK\ SAUBER  { background-color: #000000; }
+    .team-RESERVE        { background-color: #FFFFFF; color: black; }
+
+    .team-cell {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
   </style>
 </head>
 <body>
-  <div class="version">Version: Beta 0.0.21 (Logos via JS, Team Colors Fixed)</div>
+  <div class="version">Version: Beta 0.0.30 (Logos via JS; Team Colors Fixed)</div>
   <div class="header">
-    <img src="ifwl_logo.png" alt="IFWL Logo">
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
     <h1>IFWL F1 Leaderboard</h1>
-    <img src="ifwl_logo.png" alt="IFWL Logo">
+    <img src="ifwl_logo.png" alt="IFWL Logo" />
   </div>
-  <div id="leaderboard">Loading leaderboard...</div>
+
+  <h2>Driver Standings</h2>
+  <table id="driver-table">
+    <thead>
+      <tr><th>DRIVER</th><th>TEAM</th><th>TOTAL POINTS</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <h2>Constructors Standings</h2>
+  <table id="constructor-table">
+    <thead>
+      <tr><th>TEAM</th><th>TOTAL POINTS</th></tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <h2>Unassigned Drivers</h2>
+  <table id="unassigned-table">
+    <thead><tr><th>DRIVER</th></tr></thead>
+    <tbody></tbody>
+  </table>
+
   <script>
-    const sheetID = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
-    const sheetName = "Sheet1";
-    const url = `https://docs.google.com/spreadsheets/d/${sheetID}/gviz/tq?tqx=out:json&sheet=${sheetName}`;
-
-    const teamColors = {
-      "ASTON MARTIN": "#004940",
-      "KICK SAUBER": "#000000",
-      "RESERVE": "#FFFFFF",
-      "RED BULL RACING": "#1B1443",
-      "RACING BULLS": "#1B1443",
+    const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+    const teamCars = {
+      "ALPINE": "ALPINE.webp", "ASTON MARTIN": "ASTON.webp", "FERRARI": "FERRARI.webp",
+      "HAAS": "HAAS.webp", "MCLAREN": "MCLAREN.webp", "MERCEDES": "MERCEDES.webp",
+      "RACING BULLS": "RACINGBULLS.webp", "RED BULL RACING": "RBR.webp", "KICK SAUBER": "SAUBER.webp",
+      "RESERVE": "RESERVE.webp", "WILLIAMS": "WILLIAMS.webp"
     };
-
     const teamLogos = {
-      "ALPINE": "ALPINELOGO.webp",
-      "ASTON MARTIN": "ASTONLOGO.webp",
-      "FERRARI": "FERARRILOGO.webp",
-      "HAAS": "HAASLOGO.webp",
-      "MCLAREN": "MCLARENLOGO.webp",
-      "MERCEDES": "MERCEDESLOGO.webp",
-      "RACING BULLS": "RBLOGO.webp",
-      "RED BULL RACING": "RBRLOGO.webp",
-      "KICK SAUBER": "KICKLOGO.webp",
-      "RESERVE": "RESERVELOGO.webp",
-      "WILLIAMS": "WILLIAMSLOGO.webp"
+      "ALPINE": "ALPINELOGO.webp", "ASTON MARTIN": "ASTONLOGO.webp", "FERRARI": "FERARRILOGO.webp",
+      "HAAS": "HAASLOGO.webp", "MCLAREN": "MCLARENLOGO.webp", "MERCEDES": "MERCEDESLOGO.webp",
+      "RACING BULLS": "RBLOGO.webp", "RED BULL RACING": "RBRLOGO.webp", "KICK SAUBER": "KICKLOGO.webp",
+      "RESERVE": "RESERVELOGO.webp", "WILLIAMS": "WILLIAMSLOGO.webp"
     };
-
-    fetch(url)
+    fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`)
       .then(res => res.text())
-      .then(data => {
-        const json = JSON.parse(data.substr(47).slice(0, -2));
-        const rows = json.table.rows.map(row => row.c.map(cell => cell?.v || ''));
-        let driverHTML = `<table><thead><tr><th>Driver</th><th>Team</th><th>Total Points</th></tr></thead><tbody>`;
-        const teamPoints = {};
+      .then(text => JSON.parse(text.substr(47).slice(0, -2)))
+      .then(json => {
+        const rows = json.table.rows.map(r => r.c.map(c => c?.v ?? ""));
+        const drivers = rows.filter(r => r[0] && r[1]);
+        const constructorMap = {};
+        const driverTable = document.querySelector("#driver-table tbody");
+        const constructorTable = document.querySelector("#constructor-table tbody");
+        const unassignedTable = document.querySelector("#unassigned-table tbody");
 
-        rows.forEach(row => {
-          const [driver, team, , , , , , , , , , , , , , , , , , , , , , , , points] = row;
-          if (!driver || !team) return;
-          const teamKey = team.toUpperCase();
-          const color = teamColors[teamKey] || "";
-          const logo = teamLogos[teamKey] ? `<img src="${teamLogos[teamKey]}" class="team-logo" alt="${team} Logo">` : "";
-          const rowStyle = `style="background-color: ${color};${teamKey === 'RESERVE' ? 'color: black;' : ''}"`;
-          driverHTML += `<tr ${rowStyle}><td>${driver}</td><td>${logo} ${team}</td><td>${points || 0}</td></tr>`;
-          teamPoints[teamKey] = (teamPoints[teamKey] || 0) + (parseInt(points) || 0);
+        drivers.forEach(([driver, team, , , , , , , , , , , , , , , , , , , , , , , , points]) => {
+          if (!team) {
+            const unRow = document.createElement("tr");
+            unRow.innerHTML = `<td>${driver}</td>`;
+            unassignedTable.appendChild(unRow);
+            return;
+          }
+          const normTeam = team.toUpperCase().trim();
+          const row = document.createElement("tr");
+          row.className = `driver-row team-${normTeam.replace(/ /g, "\ ")}`;
+          row.innerHTML = `
+            <td>${driver}</td>
+            <td class="team-cell">
+              <img src="${teamCars[normTeam]}" class="car" alt="${team}" />
+              ${team}
+              <img src="${teamLogos[normTeam]}" class="logo" alt="${team}" />
+            </td>
+            <td>${points || 0}</td>`;
+          driverTable.appendChild(row);
+          constructorMap[normTeam] = (constructorMap[normTeam] || 0) + (parseInt(points) || 0);
         });
 
-        driverHTML += `</tbody></table><h2>Constructors Standings</h2><table><thead><tr><th>Team</th><th>Total Points</th></tr></thead><tbody>`;
-        Object.entries(teamPoints).forEach(([team, points]) => {
-          const color = teamColors[team] || "";
-          const logo = teamLogos[team] ? `<img src="${teamLogos[team]}" class="team-logo" alt="${team} Logo">` : "";
-          const rowStyle = `style="background-color: ${color};${team === 'RESERVE' ? 'color: black;' : ''}"`;
-          driverHTML += `<tr ${rowStyle}><td>${logo} ${team}</td><td>${points}</td></tr>`;
+        Object.entries(constructorMap).forEach(([team, total]) => {
+          const row = document.createElement("tr");
+          row.className = `driver-row team-${team.replace(/ /g, "\ ")}`;
+          row.innerHTML = `
+            <td class="team-cell">
+              <img src="${teamCars[team]}" class="car" alt="${team}" />
+              ${team}
+              <img src="${teamLogos[team]}" class="logo" alt="${team}" />
+            </td>
+            <td>${total}</td>`;
+          constructorTable.appendChild(row);
         });
-        driverHTML += `</tbody></table>`;
-        document.getElementById("leaderboard").innerHTML = driverHTML;
       });
   </script>
 </body>
